# API-Receitas

./: pyproject.toml
src/: chef_table.sql  database.py  dependencies.py  main.py  recipe_structure.json  redis_cache.py  tables.sql  utils.py
src/api/routers/: chefs.py  dependencies.py  recipes.py  users.py
src/api/v1/routers/: chefs.py  recipes.py
src/exceptions/: chef_exceptions.py
src/interfaces/: connection_db.py  repository.py  service.py
src/models/: auth.py  chef.py  recipe.py
src/repositories/: chef_repository.py  recipe_repository.py  redis_repository.py
src/services/: auth_service.py  chef_service.py  recipe_service.py
