[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "mayconcorreatinti",email = "maycon326754@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.127.0,<0.128.0)",
    "mysql-connector-python (>=9.5.0,<10.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
